<resources>
    <string name="app_name">StudentData</string>
    <string name="title_activity_post_data">PostData</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="title_activity_country_state_list">CountryStateListActivity</string>
    <string name="title_activity_set_lat_long_maps">Map</string>
    <string name="title_activity_display_users_maps">Map</string>
    <string name="uploadData">Click to Upload Data</string>
    <string name="retrieveData">Click to Retrieve Data</string>
    <string name="enterNickName">Enter Nick Name</string>
    <string name="enterPassword">Enter Password</string>
    <string name="setCountry">Set Country</string>
    <string name="string">String</string>
    <string name="setState">Set State</string>
    <string name="enterCity">Enter City</string>
    <string name="setLongitude">Set Longitude</string>
    <string name="setLatitude">Set Latitude</string>
    <string name="sdsuText">SDSU STUDENT FINDER</string>
    <string name="year">Year</string>
    <string name="setCountryState">Set Country State</string>
    <string name="setLatLong">Set Lat Long</string>
    <string name="nickName">Nick Name</string>
    <string name="password">Password</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="state">State</string>
    <string name="back">Back</string>
    <string name="clearAllFields">Clear All Fields</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="filterByCountry">Filter By Country</string>
    <string name="filterByState">Filter By State</string>
    <string name="filterByYear">Filter By Year</string>
    <string name="displayUsersOnList">Display Users On List</string>
    <string name="displayUsersOnMap">Display Users On Map</string>
</resources>
