<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="39dp"
        android:text="@string/filterByCountry"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <Spinner
        android:id="@+id/filterSpinnerCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView12"
        android:layout_marginTop="12dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView12"
        android:layout_below="@+id/filterSpinnerCountry"
        android:layout_marginTop="42dp"
        android:text="@string/filterByState"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <Spinner
        android:id="@+id/filterSpinnerState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView13"
        android:layout_marginTop="15dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView13"
        android:layout_centerVertical="true"
        android:text="@string/filterByYear"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <Spinner
        android:id="@+id/filterSpinnerYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView14"
        android:layout_marginTop="17dp"
        android:visibility="visible" />

    <Button
        android:id="@+id/userListViewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/displayUsersOnList"
        android:layout_above="@+id/userMapViewButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/userMapViewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/displayUsersOnMap"
        android:layout_above="@+id/filterBackButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/filterBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>